--- a/css/themsp1.css
+++ b/css/themsp1.css
@@ -1,9 +1,9 @@
 .sanpham {
-    float: right;
-    width: calc(95% - 350px);
-    margin-top: 20px;
+    /* float: right; */
+    /* width: calc(95% - 350px); */
+    /* margin-top: 20px; */
     background-color: white;
-    margin-right: 50px;
+    /* margin-right: 100px; */
     border-radius: 10px;
     border: 2px solid gray;
 }
